--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-markdown": "4.2.2",
     "react-mde": "7.6.2",
     "react-router-dom": "5.1.2",
-    "react-window-size": "^1.2.2",
+    "react-window-size": "1.2.2",
     "showdown": "1.9.1"
   },
   "scripts": {
