--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@firebase/app": "0.4.25",
     "@material-ui/core": "4.6.1",
+    "filepond": "^4.7.4",
+    "filepond-plugin-image-preview": "^4.5.0",
     "firebase": "7.5.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-file-base64": "1.0.3",
+    "react-filepond": "^7.0.1",
     "react-markdown": "4.2.2",
     "react-mde": "7.6.2",
     "react-router-dom": "5.1.2",
