--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@deepqai/react-firebaseui": "3.1.3",
     "@firebase/app": "0.4.25",
     "@material-ui/core": "4.6.1",
     "filepond": "4.7.4",
@@ -12,6 +13,7 @@
     "react-dom": "16.12.0",
     "react-file-base64": "1.0.3",
     "react-filepond": "7.0.1",
+    "react-firebaseui": "4.0.0",
     "react-markdown": "4.2.2",
     "react-mde": "7.6.2",
     "react-router-dom": "5.1.2",
