--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react",
+  "name": "pop-blog-3",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
@@ -28,5 +28,7 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
